infra/k8s/cartService-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
        - name: cart-service
          image: jasimck/ecommerce-cart-service:latest
          ports:
            - containerPort: 3003
          env:  # Add necessary environment variables here
            - name: KAFKA_CLIENT_ID
              value: "cart-service"  # Ensure this matches the service
            - name: KAFKA_BROKERS
              value: "kafka:29092"  # Pointing to your Kafka service in the cluster

---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  type: ClusterIP
  selector:
    app: cart-service
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
