infra/k8s/kafka-deployment.yaml
# Zookeeper Service
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  type: ClusterIP
  ports:
    - name: zookeeper-port  # Name for the Zookeeper port
      protocol: TCP
      port: 2181
      targetPort: 2181
  selector:
    app: zookeeper

---
# Zookeeper Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: wurstmeister/zookeeper:latest
          ports:
            - containerPort: 2181
---
# Kafka Service
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
    - name: internal-port  # Name for the internal port
      protocol: TCP
      port: 29092
      targetPort: 29092
    - name: external-port  # Name for the external port
      protocol: TCP
      port: 9092
      targetPort: 9092

---
# Kafka Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: wurstmeister/kafka:latest
          ports:
            - containerPort: 29092
---
# Kafka External Service
apiVersion: v1
kind: Service
metadata:
  name: kafka-external
spec:
  type: NodePort
  selector:
    app: kafka
  ports:
    - name: external-node-port  # Name for the NodePort
      protocol: TCP
      port: 9092
      targetPort: 9092
      nodePort: 30092
