infra/k8s/productService-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: jasimck/ecommerce-product-service:latest
          ports:
            - containerPort: 3001
          env:  # Add necessary environment variables here
            - name: KAFKA_CLIENT_ID
              value: "product-service"  # Ensure this matches the service
            - name: KAFKA_BROKERS
              value: "kafka:29092"  # Pointing to your Kafka service in the cluster

---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
