infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: posts.com  # Ensure this matches your actual domain
      http:
        paths:
          - path: /api/user-service
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3000  # Matches the user service port
          - path: /api/product-service
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 3001  # Matches the product service port
          - path: /api/cart-service
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 3003  # Matches the cart service port
          - path: /api/order-service
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3004  # Matches the order service port
